<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp" >

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:inputType="textPassword"
        android:cursorVisible="true"
        android:textCursorDrawable="@null"
        android:textColor="@android:color/black"
        android:background="@drawable/bg_corner_circle_internal_shadow"
        android:hint="@string/password" />
    
    <EditText
        android:id="@+id/pwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:inputType="textPassword"
        android:cursorVisible="true"
        android:textCursorDrawable="@null"
        android:textColor="@android:color/black"
        android:background="@drawable/bg_corner_circle_internal_shadow"
        android:hint="@string/password" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusableInTouchMode="true"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0.5"
            android:background="@drawable/selector_btn_gray"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="0.5"
            android:background="@drawable/selector_btn_gray"
            android:text="@string/login" />
    </LinearLayout>

</LinearLayout>