<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/bg_corner_circle_no_shadow"
                android:focusableInTouchMode="true" >

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:gravity="right|center_vertical"
                    android:text="@string/name"
                    android:textColor="#333333"
                    android:textSize="15sp" />

                <ImageButton
                    android:id="@+id/clear_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="14dp"
                    android:visibility="gone"
                    android:background="@drawable/login_clear_username" />

                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:layout_toLeftOf="@+id/clear_name"
                    android:layout_toRightOf="@+id/tv_name"
                    android:background="@null"
                    android:textCursorDrawable="@null"
                    android:textColor="#333333"
                    android:textSize="15sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/bg_corner_circle_no_shadow" >

                <TextView
                    android:id="@+id/tv_account"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:gravity="right|center_vertical"
                    android:text="@string/account"
                    android:textColor="#333333"
                    android:textSize="15sp" />

                <ImageButton
                    android:id="@+id/clear_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="14dp"
                    android:visibility="gone"
                    android:background="@drawable/login_clear_username" />

                <EditText
                    android:id="@+id/account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:layout_toLeftOf="@+id/clear_account"
                    android:layout_toRightOf="@+id/tv_account"
                    android:background="@null"
                    android:textCursorDrawable="@null"
                    android:textColor="#333333"
                    android:textSize="15sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/bg_corner_circle_no_shadow" >

                <TextView
                    android:id="@+id/tv_pwd"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:gravity="right|center_vertical"
                    android:text="@string/password_tip"
                    android:textColor="#333333"
                    android:textSize="15sp" />

                <ImageButton
                    android:id="@+id/clear_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="14dp"
                    android:visibility="gone"
                    android:background="@drawable/login_clear_username" />

                <EditText
                    android:id="@+id/pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:layout_toLeftOf="@+id/clear_pwd"
                    android:layout_toRightOf="@+id/tv_pwd"
                    android:background="@null"
                    android:textCursorDrawable="@null"
                    android:textColor="#333333"
                    android:textSize="15sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/bg_corner_circle_no_shadow" >

                <TextView
                    android:id="@+id/tv_remark"
                    android:layout_width="80dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:gravity="right|center_vertical"
                    android:text="@string/remark"
                    android:textColor="#333333"
                    android:textSize="15sp" />

                <ImageButton
                    android:id="@+id/clear_remark"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="14dp"
                    android:visibility="gone"
                    android:background="@drawable/login_clear_username" />

                <EditText
                    android:id="@+id/remark"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:layout_toLeftOf="@+id/clear_remark"
                    android:layout_toRightOf="@+id/tv_remark"
                    android:background="@null"
                    android:textCursorDrawable="@null"
                    android:textColor="#333333"
                    android:textSize="15sp" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>